# comfyui_image_embeddings

./: README.md  __init__.py  artists.csv  index.json  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/image_embeddings/: nodes.py
tests/: __init__.py  test_image_embeddings.py
web/: character_tag_trigger.js  custom_image_loader_preview.js
