[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image_embeddings"
version = "0.0.1"
description = "use comfyui to image embeddings"
authors = [
  {name = "Comfyui-Image-Embeddings", email = "baijunty@163.com"}
]
readme = "README.md"
license = {text = "GNU General Public License v3"}
requires-python = ">=3.10"
classifiers = []
dependencies = [
"imagehash",
]

[project.urls]
Repository = "https://github.com/baijunty/image_embeddings"
BugTracker = "https://github.com/baijunty/image_embeddings/issues"
Documentation = "https://github.com/baijunty/image_embeddings/wiki"


[tool.comfy]
PublisherId = "baijunty"
DisplayName = "Comfyui-Image-Embeddings"
Icon = ""
Tags = []
Repository = "https://github.com/baijunty/image_embeddings"
